5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4071/executions/1643_1053.log
== TEST (2019-04-10 21:52:56) 
-- CODE:
herry=float(input("leia o nome do patrono:"))
if (herry=cervo):
	

-- ERROR:
File "XXXX", line 2
    if (herry=cervo):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 21:53:06) 
-- CODE:
herry=float(input("leia o nome do patrono:"))
if (herry==cervo):
	

-- ERROR:
File "XXXX", line 4
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 21:54:51) 
-- CODE:
herry=float(input("leia o nome do patrono:"))
if (herry==cervo):
	mensagem="cervo eh patrono do harry potter"
else:
	mensagem="nao eh patrono do herry potter"
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    herry=float(input())
ValueError: could not convert string to float: 'cervo'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 21:56:01) 
-- CODE:
herry=input("leia o nome do patrono:"))
if (herry==cervo):
	mensagem="cervo eh patrono do harry potter"
else:
	mensagem="nao eh patrono do herry potter"
print(mensagem)
-- ERROR:
File "XXXX", line 1
    herry=input())
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 21:56:16) 
-- CODE:
herry=float(input("leia o nome do patrono:"))
if (herry==cervo):
	mensagem="cervo eh patrono do harry potter"
else:
	mensagem="nao eh patrono do herry potter"
print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    herry=float(input())
ValueError: could not convert string to float: 'cervo'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 21:57:24) 
-- CODE:
herry=input("leia o nome do patrono:"))
if (herry=="cervo"):
	mensagem="cervo eh patrono do harry potter"
else:
	mensagem="nao eh patrono do herry potter"
print(mensagem)
-- ERROR:
File "XXXX", line 1
    herry=input())
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 21:57:32) 
-- CODE:
herry=input("leia o nome do patrono:")
if (herry=="cervo"):
	mensagem="cervo eh patrono do harry potter"
else:
	mensagem="nao eh patrono do herry potter"
print(mensagem)
-- OUTPUT:
cervo eh patrono do harry potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 21:58:01) 
-- CODE:
herry=input("leia o nome do patrono:")
if (herry=="cervo"):
	mensagem="cervo eh patrono do harry potter"
else:
	mensagem="nao eh patrono do herry potter"
print(mensagem)
-- EXECUTION TIME:
0.244453
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do harry potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
nao eh patrono do herry potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 21:58:43) 
-- CODE:
herry=input("leia o nome do patrono:")
if (herry=="cervo"):
	mensagem="cervo_eh_patrono_do_harry_potter"
else:
	mensagem="nao_eh_patrono_do_herry_potter"
print(mensagem)
-- EXECUTION TIME:
0.298506
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo_eh_patrono_do_harry_potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
nao_eh_patrono_do_herry_potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 21:58:48) 
-- CODE:
herry=input("leia o nome do patrono:")
if (herry=="cervo"):
	mensagem="cervo_eh_patrono_do_harry_potter"
else:
	mensagem="nao_eh_patrono_do_herry_potter"
print(mensagem)
-- OUTPUT:
cervo_eh_patrono_do_harry_potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 21:59:58) 
-- CODE:
herry=input("leia o nome do patrono:")
if (herry=="cervo"):
	mensagem="cervo_eh_patrono_do_harry_potter"
else:
	mensagem="cervo_nao_eh_patrono_do_herry_potter"
print(mensagem)
-- OUTPUT:
cervo_eh_patrono_do_harry_potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 22:00:38) 
-- CODE:
herry=input("leia o nome do patrono:")
if (herry=="cervo"):
	mensagem=herry+"cervo_eh_patrono_do_harry_potter"
else:
	mensagem=herry+"cervo_nao_eh_patrono_do_herry_potter"
print(mensagem)
-- OUTPUT:
cervocervo_eh_patrono_do_harry_potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 22:00:50) 
-- CODE:
herry=input("leia o nome do patrono:")
if (herry=="cervo"):
	mensagem=herry+"cervo_eh_patrono_do_harry_potter"
else:
	mensagem=herry+"cervo_nao_eh_patrono_do_herry_potter"
print(mensagem)
-- EXECUTION TIME:
0.162895
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervocervo_eh_patrono_do_harry_potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bodecervo_nao_eh_patrono_do_herry_potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 22:01:27) 
-- CODE:
herry=input("leia o nome do patrono:")
if (herry=="cervo"):
	mensagem=herry+"cervo_eh_patrono_do_harry_potter"
else:
	mensagem=herry+"nao_eh_patrono_do_herry_potter"
print(mensagem)
-- OUTPUT:
cervocervo_eh_patrono_do_harry_potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 22:01:39) 
-- CODE:
herry=input("leia o nome do patrono:")
if (herry=="cervo"):
	mensagem=herry+"cervo_eh_patrono_do_harry_potter"
else:
	mensagem=herry+"nao_eh_patrono_do_herry_potter"
print(mensagem)
-- EXECUTION TIME:
0.13327
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervocervo_eh_patrono_do_harry_potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bodenao_eh_patrono_do_herry_potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 22:02:03) 
-- CODE:
herry=input("leia o nome do patrono:")
if (herry=="cervo"):
	mensagem=herry+"cervo_eh_patrono_do_harry_potter"
else:
	mensagem=herry+"nao_eh_patrono_do_herry_potter"
	print(mensagem)
-- OUTPUT:
cervocervo_eh_patrono_do_harry_potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 22:02:17) 
-- CODE:
herry=input("leia o nome do patrono:")
if (herry=="cervo"):
	mensagem=herry+"cervo_eh_patrono_do_harry_potter"
else:
	mensagem=herry+"nao_eh_patrono_do_herry_potter"
	print(mensagem)
-- EXECUTION TIME:
0.204268
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:

-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bodenao_eh_patrono_do_herry_potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 22:02:40) 
-- CODE:
herry=input("leia o nome do patrono:")
if(herry=="cervo"):
	mensagem=herry+"cervo_eh_patrono_do_harry_potter"
else:
	mensagem=herry+"nao_eh_patrono_do_herry_potter"
	print(mensagem)
-- EXECUTION TIME:
0.159306
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:

-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bodenao_eh_patrono_do_herry_potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 22:03:24) 
-- CODE:
herry=input("leia o nome do patrono:")
if (herry=="cervo"):
	mensagem=herry+" cervo eh patrono do harry potter"
else:
	mensagem=herry+" nao eh patrono do herry potter"
	print(mensagem)
-- OUTPUT:
cervocervo_eh_patrono_do_harry_potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 22:03:30) 
-- CODE:
herry=input("leia o nome do patrono:")
if (herry=="cervo"):
	mensagem=herry+" cervo eh patrono do harry potter"
else:
	mensagem=herry+" nao eh patrono do herry potter"
	print(mensagem)
-- EXECUTION TIME:
0.223648
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:

-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do herry potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 22:04:08) 
-- CODE:
herry=input("leia o nome do patrono:")
if (herry=="cervo"):
	mensagem=herry+" eh patrono do harry potter"
else:
	mensagem=herry+" nao eh patrono do herry potter"
	print(mensagem)
-- OUTPUT:
cervocervo_eh_patrono_do_harry_potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 22:04:09) 
-- CODE:
herry=input("leia o nome do patrono:")
if (herry=="cervo"):
	mensagem=herry+" eh patrono do harry potter"
else:
	mensagem=herry+" nao eh patrono do herry potter"
	print(mensagem)
-- EXECUTION TIME:
0.259788
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:

-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do herry potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 22:07:42) 
-- CODE:
herry=input("leia o nome do patrono:")
if (herry=="cervo"):
	mensagem=herry+" eh patrono do harry potter"
else:
	mensagem=herry+" nao eh patrono do herry potter"
print(mensagem)
-- EXECUTION TIME:
0.214514
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do harry potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do herry potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 22:07:44) 
-- CODE:
herry=input("leia o nome do patrono:")
if (herry=="cervo"):
	mensagem=herry+" eh patrono do harry potter"
else:
	mensagem=herry+" nao eh patrono do herry potter"
print(mensagem)
-- OUTPUT:
cervo eh patrono do harry potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 22:08:14) 
-- CODE:
herry=input("leia o nome do patrono:")
if (herry=="cervo"):
	mensagem=herry + " eh patrono do harry potter"
else:
	mensagem=herry + " nao eh patrono do herry potter"
print(mensagem)
-- OUTPUT:
cervo eh patrono do harry potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 22:10:42) 
-- CODE:
herry = input("leia o nome do patrono:")
if (herry == "cervo"):
	mensagem = herry + "eh patrono do harry potter"
else:
	mensagem = herry + "nao eh patrono do herry potter"
print(mensagem)
-- OUTPUT:
cervoeh patrono do harry potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 23:54:30) 
-- CODE:
herry = input("leia o nome do patrono:")
if (herry == "cervo"):
	mensagem = herry + " eh patrono do harry potter"
else:
	mensagem = herry + " nao eh patrono do herry potter"
print(herry, mensagem)
-- OUTPUT:
cervo cervo eh patrono do harry potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 23:54:53) 
-- CODE:
herry = input("leia o nome do patrono:")
if (herry == "cervo"):
	mensagem = herry + " eh patrono do harry potter"
else:
	mensagem = herry + " nao eh patrono do herry potter"
print(herry, mensagem)
-- EXECUTION TIME:
0.196637
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo cervo eh patrono do harry potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode bode nao eh patrono do herry potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 23:55:49) 
-- CODE:
herry = input("leia o nome do patrono:")
if (herry == "cervo"):
	mensagem = " eh patrono do harry potter"
else:
	mensagem = " nao eh patrono do herry potter"
print(herry, mensagem)
-- OUTPUT:
cervo  eh patrono do harry potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 23:55:50) 
-- CODE:
herry = input("leia o nome do patrono:")
if (herry == "cervo"):
	mensagem = " eh patrono do harry potter"
else:
	mensagem = " nao eh patrono do herry potter"
print(herry, mensagem)
-- EXECUTION TIME:
0.178936
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
leia o nome do patrono:cervo  eh patrono do harry potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
leia o nome do patrono:bode  nao eh patrono do herry potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 23:56:09) 
-- CODE:
herry = input("leia o nome do patrono:")
if (herry == "cervo"):
	mensagem = " eh patrono do harry potter"
else:
	mensagem = " nao eh patrono do herry potter"
print(herry, mensagem)
-- EXECUTION TIME:
0.212189
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo  eh patrono do harry potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode  nao eh patrono do herry potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 23:56:33) 
-- CODE:
herry = input("leia o nome do patrono:")
if (herry == "cervo"):
	mensagem = " eh patrono do Harry Potter"
else:
	mensagem = " nao eh patrono do Herry Potter"
print(herry, mensagem)
-- EXECUTION TIME:
0.192174
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo  eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode  nao eh patrono do Herry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 23:56:57) 
-- CODE:
herry = input("leia o nome do patrono:")
if (herry == "cervo"):
	
	mensagem = " eh patrono do Harry Potter"
else:
	
	mensagem = " nao eh patrono do Herry Potter"
print(herry, mensagem)
-- OUTPUT:
cervo  eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 23:57:29) 
-- CODE:
herry = input("entre com patrono")
if (herry == "cervo"):
	
	mensagem = " eh patrono do Harry Potter"
else:
	
	mensagem = " nao eh patrono do Herry Potter"
print(herry, mensagem)
-- EXECUTION TIME:
0.136256
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo  eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode  nao eh patrono do Herry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 23:58:11) 
-- CODE:
harry = input("entre com patrono")
if (harry == "cervo"):

	mensagem = " eh patrono do Harry Potter"
else:
	
	mensagem = " nao eh patrono do Harry Potter"
print(harry, mensagem)
-- EXECUTION TIME:
0.196403
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo  eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode  nao eh patrono do Harry Potter
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
